@@ -12,7 +12,7 @@ HOSTS:
       - master
       - client
     platform: el-7-x86_64
-    box: ayohrling/oel7
+    box: onyxpoint/oel-7-x86_64
     hypervisor: <%= hypervisor %>
     yum_repos:
       epel:
@@ -24,7 +24,7 @@ HOSTS:
     roles:
       - client
     platform: el-6-x86_64
-    box: ayohrling/oel6
+    box: onyxpoint/oel-6-x86_64
     hypervisor: <%= hypervisor %>
     yum_repos:
       epel:
