@@ -2,6 +2,7 @@
 - Added $package_ensure parameter
   - Changed the package from 'latest' to 'installed'
   - It will also respect `simp_options::package_ensure`
+- Update badges and contribution guide URL in README.md
 
 * Fri Sep 07 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 6.1.0-0
 - Drop Hiera 4 support
